--- a/package.json
+++ b/package.json
@@ -5,11 +5,15 @@
   "main": "src/app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "webpack-dev-server --inline --hot"
+    "start": "webpack-dev-server --inline --hot --open"
   },
   "author": "Paul Heasley <paul@phdesign.com.au>",
   "license": "MIT",
   "devDependencies": {
+    "css-loader": "^0.28.4",
+    "html-loader": "^0.5.1",
+    "ngtemplate-loader": "^2.0.1",
+    "style-loader": "^0.18.2",
     "webpack": "^3.5.4",
     "webpack-dev-server": "^2.7.1"
   },
