--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "webpack-dev-server": "^2.7.1"
   },
   "dependencies": {
-    "angular": "^1.6.5"
+    "angular": "^1.6.5",
+    "node-uuid": "^1.4.8"
   }
 }
