--- a/package.json
+++ b/package.json
@@ -5,12 +5,14 @@
   "main": "src/app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "webpack-dev-server --inline --hot --open"
+    "start": "webpack-dev-server --inline --hot"
   },
   "author": "Paul Heasley <paul@phdesign.com.au>",
   "license": "MIT",
   "devDependencies": {
     "css-loader": "^0.28.4",
+    "eslint": "^4.4.1",
+    "eslint-loader": "^1.9.0",
     "html-loader": "^0.5.1",
     "ngtemplate-loader": "^2.0.1",
     "style-loader": "^0.18.2",
