--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "src/app.js",
   "scripts": {
     "test": "mocha-webpack",
+    "test:debug": "webpack --config webpack.test.js && mocha ./.tmp/bundle.js --inspect-brk=0.0.0.0:9229",
     "start": "webpack-dev-server --inline --hot"
   },
   "author": "Paul Heasley <paul@phdesign.com.au>",
@@ -19,6 +20,7 @@
     "jsdom": "^11.6.2",
     "mocha": "^4.1.0",
     "ngtemplate-loader": "^2.0.1",
+    "sinon": "^4.2.2",
     "style-loader": "^0.18.2",
     "webpack": "^3.5.4",
     "webpack-dev-server": "^2.7.1"
@@ -26,6 +28,7 @@
   "dependencies": {
     "angular": "^1.6.5",
     "mocha-webpack": "^1.0.1",
+    "mock-local-storage": "^1.0.5",
     "node-uuid": "^1.4.8",
     "webpack-node-externals": "^1.6.0"
   }
