--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "mocha": "^4.1.0",
     "ngtemplate-loader": "^2.0.1",
     "sinon": "^4.2.2",
+    "sinon-chai": "^2.14.0",
     "style-loader": "^0.18.2",
     "webpack": "^3.5.4",
     "webpack-dev-server": "^2.7.1"
